multilabel gradient retropropagation

--- a/rapport.tex
+++ b/rapport.tex
@@ -59,6 +59,11 @@
 % bigger operators
 \usepackage{relsize}
 
+% neural figures
+\usepackage{tikz}
+\def\layersep{2.5cm}
+
+
 % for cases
 \makeatletter
 \renewcommand{\env@cases}[1][@{}l@{\quad}l@{}]{%
