--- a/part3.tex
+++ b/part3.tex
@@ -120,40 +120,42 @@ It will be easier to maximize the log likelihood:
 
 It is the same as minimizing the following (cross entropy loss):
 \begin{align}
-	J(\theta) = - \sum_i \left(y^{(i)} \log( h_\theta(x^{(i)}) ) + (1 - y^{(i)}) \log( 1 - h_\theta(x^{(i)}) ) \right).
+	E(\theta) = - \sum_i \left(y^{(i)} \log( h_\theta(x^{(i)}) ) + (1 - y^{(i)}) \log( 1 - h_\theta(x^{(i)}) ) \right).
 \end{align}
 
 
 Note that only one of the two terms in the summation is non-zero for each training example (depending on whether the label $y^{(i)}$ is 0 or 1). When $y^{(i)} = 1$ minimizing the cost function means we need to make $h_\theta(x^{(i)})$ large, and when $y^{(i)} = 0$ we want to make $1 - h_\theta$ large as explained above.
 
-We now have a cost function that measures how well a given hypothesis $h_\theta$ fits our training data. We can learn to classify our training data by minimizing $J(\theta)$ to find the best choice of $\theta$. Once we have done so, we can classify a new test point as “1” or “0” by checking which of these two class labels is most probable: if $P(y=1|x) > P(y=0|x)$ then we label the example as a “1”, and “0” otherwise. This is the same as checking whether $h_\theta(x) > 0.5$.
+We now have a cost function that measures how well a given hypothesis $h_\theta$ fits our training data. We can learn to classify our training data by minimizing $E(\theta)$ to find the best choice of $\theta$. Once we have done so, we can classify a new test point as “1” or “0” by checking which of these two class labels is most probable: if $P(y=1|x) > P(y=0|x)$ then we label the example as a “1”, and “0” otherwise. This is the same as checking whether $h_\theta(x) > 0.5$.
 
 \subsection{Optimization}
-We want to minimize $J(\theta)$. The derivative of $J(\theta)$ as given above with respect to $\theta_j$ is:
+We want to minimize $E(\theta)$. The derivative of $E(\theta)$ as given above with respect to $\theta_j$ is:
 
 \begin{align}
-	\frac{\partial J(\theta)}{\partial \theta_j} = \sum_i x^{(i)}_j (h_\theta(x^{(i)}) - y^{(i)})
+	\frac{\partial E(\theta)}{\partial \theta_j} = \sum_i x^{(i)}_j (h_\theta(x^{(i)}) - y^{(i)})
 \end{align}
+
+Demonstration available \href{https://math.stackexchange.com/questions/477207/derivative-of-cost-function-for-logistic-regression}{here}.
 
 Written in its vector form, the entire gradient can be expressed as ($x^{(i)}$ being a d dimensional vector, with d being the dimension of each sample feature):
 
 \begin{align}
-	\nabla_\theta J(\theta) 
+	\nabla_\theta E(\theta) 
 	&= 
 	\begin{bmatrix}
-		\frac{\partial J(\theta)}{\partial \theta_1}\\
-		\frac{\partial J(\theta)}{\partial \theta_2}\\
+		\frac{\partial E(\theta)}{\partial \theta_1}\\
+		\frac{\partial E(\theta)}{\partial \theta_2}\\
 		\vdots\\
-		\frac{\partial J(\theta)}{\partial \theta_d}
+		\frac{\partial E(\theta)}{\partial \theta_d}
 	\end{bmatrix}
 	=
 		\sum_i x^{(i)} (h_\theta(x^{(i)}) - y^{(i)})
 \end{align}
 
-We can then apply gradient descent to find global minimum since $J(\theta)$ is convex, with learning rate $\alpha$:
+We can then apply gradient descent to find global minimum since $E(\theta)$ is convex, with learning rate $\alpha$:
 
 \begin{align}
-	\theta \leftarrow \theta - \alpha \nabla_\theta J(\theta)
+	\theta \leftarrow \theta - \alpha \nabla_\theta E(\theta)
 \end{align}
 
 \subsection{Vectorial representations}
@@ -253,13 +255,13 @@ It will be easier to maximize the log likelihood:
 It is the same as minimizing the following (cross entropy loss):
 
 \begin{align} 
-	J(\theta) = - \left[ \sum_{i=1}^{m} \sum_{k=1}^{K} \mathds{1}\left\{y^{(i)} = k\right\} \log \frac{\exp(\theta^{(k)\top} x^{(i)})}{\sum_{j=1}^K \exp(\theta^{(j)\top} x^{(i)})}\right] 
+	E(\theta) = - \left[ \sum_{i=1}^{m} \sum_{k=1}^{K} \mathds{1}\left\{y^{(i)} = k\right\} \log \frac{\exp(\theta^{(k)\top} x^{(i)})}{\sum_{j=1}^K \exp(\theta^{(j)\top} x^{(i)})}\right] 
 \end{align}
 
 Notice that this generalizes the logistic regression cost function, which could also have been written:
 
 \begin{align}
-	J(\theta) &= - \left[ \sum_{i=1}^m (1-y^{(i)}) \log (1-h_\theta(x^{(i)})) + y^{(i)} \log h_\theta(x^{(i)}) \right] \\ 
+	E(\theta) &= - \left[ \sum_{i=1}^m (1-y^{(i)}) \log (1-h_\theta(x^{(i)})) + y^{(i)} \log h_\theta(x^{(i)}) \right] \\ 
 			  &= - \left[ \sum_{i=1}^{m} \sum_{k=0}^{1} \mathds{1}\left\{y^{(i)} = k\right\} \log P(y^{(i)} = k | x^{(i)} ; \theta) \right] 
 \end{align}
 The softmax cost function is similar, except that we now sum over the K different possible values of the class label. Note also that in softmax regression, we have that
@@ -270,13 +272,13 @@ The softmax cost function is similar, except that we now sum over the K differen
 
 \subsection{Optimization}
 
-We cannot solve for the minimum of $J(\theta)$ analytically, and thus as usual we’ll resort to an iterative optimization algorithm. Taking derivatives, one can show that the gradient is:
+We cannot solve for the minimum of $E(\theta)$ analytically, and thus as usual we’ll resort to an iterative optimization algorithm. Taking derivatives, one can show that the gradient is:
 
-\begin{align} \nabla_{\theta^{(k)}} J(\theta) = - \sum_{i=1}^{m}{ \left[ x^{(i)} \left( \mathds{1} \{ y^{(i)} = k\} - P(Y^{(i)} = k | x^{(i)}; \theta) \right) \right] } \end{align}
+\begin{align} \nabla_{\theta^{(k)}} E(\theta) = - \sum_{i=1}^{m}{ \left[ x^{(i)} \left( \mathds{1} \{ y^{(i)} = k\} - P(Y^{(i)} = k | x^{(i)}; \theta) \right) \right] } \end{align}
 
-In particular, $\nabla_{\theta^{(k)}} J(\theta)$ is itself a vector, so that its j-th element is $\frac{\partial J(\theta)}{\partial \theta_{lk}}$ the partial derivative of $J(\theta)$ with respect to the j-th element of $\theta^{(k)}$.
+In particular, $\nabla_{\theta^{(k)}} E(\theta)$ is itself a vector, so that its j-th element is $\frac{\partial E(\theta)}{\partial \theta_{lk}}$ the partial derivative of $E(\theta)$ with respect to the j-th element of $\theta^{(k)}$.
 
-Armed with this formula for the derivative, one can then plug it into a standard optimization package and have it minimize $J(\theta)$.
+Armed with this formula for the derivative, one can then plug it into a standard optimization package and have it minimize $E(\theta)$.
 
 \subsection{Properties of softmax regression parameterization}
 
@@ -287,7 +289,7 @@ P(y^{(i)} = k | x^{(i)} ; \theta) &= \frac{\exp((\theta^{(k)}-\psi)^\top x^{(i)}
 \end{align}
 In other words, subtracting $\psi$ from every $\theta^{(j)}$ does not affect our hypothesis’ predictions at all! This shows that softmax regression’s parameters are “redundant.” More formally, we say that our softmax model is ”‘overparameterized,”’ meaning that for any hypothesis we might fit to the data, there are multiple parameter settings that give rise to exactly the same hypothesis function $h_\theta$ mapping from inputs x to the predictions.
 
-Further, if the cost function $J(\theta)$ is minimized by some setting of the parameters $(\theta^{(1)}, \theta^{(2)},\ldots, \theta^{(k)})$, then it is also minimized by $(\theta^{(1)} - \psi, \theta^{(2)} - \psi,\ldots, \theta^{(k)} - \psi)$ for any value of $\psi$. Thus, the minimizer of $J(\theta)$ is not unique. (Interestingly, $J(\theta)$ is still convex, and thus gradient descent will not run into local optima problems. But the Hessian is singular/non-invertible, which causes a straightforward implementation of Newton’s method to run into numerical problems.)
+Further, if the cost function $E(\theta)$ is minimized by some setting of the parameters $(\theta^{(1)}, \theta^{(2)},\ldots, \theta^{(k)})$, then it is also minimized by $(\theta^{(1)} - \psi, \theta^{(2)} - \psi,\ldots, \theta^{(k)} - \psi)$ for any value of $\psi$. Thus, the minimizer of $E(\theta)$ is not unique. (Interestingly, $E(\theta)$ is still convex, and thus gradient descent will not run into local optima problems. But the Hessian is singular/non-invertible, which causes a straightforward implementation of Newton’s method to run into numerical problems.)
 
 Notice also that by setting $\psi = \theta^{(K)}$, one can always replace $\theta^{(K)}$ with $\theta^{(K)} - \psi = \vec{0}$ (the vector of all 0’s), without affecting the hypothesis. Thus, one could “eliminate” the vector of parameters $\theta^{(K)}$ (or any other $\theta^{(k)}$, for any single value of k), without harming the representational power of our hypothesis. Indeed, rather than optimizing over the $K\cdot$ n parameters $(\theta^{(1)}, \theta^{(2)},\ldots, \theta^{(K)}) (where \theta^{(k)} \in \Re^{n})$, one can instead set $\theta^{(K)} = \vec{0}$ and optimize only with respect to the $K \cdot$ n remaining parameters.
 
@@ -423,7 +425,6 @@ With $\mathcal{P}_i$ the set of indices among K classes which are positives amon
 
 \begin{align}
 	L(\theta) &= \prod_{i=1}^m \prod_{j=1}^K P(Y_j=y_j^{(i)} | x^{(i)}) \\
-			  &= \prod_{i=1}^m \left[ \prod_{j \in \mathcal{P}_i } P(Y_j=1 | x^{(i)}) \times \prod_{l \in \mathcal{N}_i} P(Y_l=0 | x^{(i)}) \right] \\
 			  &= \prod_{i=1}^m  \prod_{j \in \mathcal{P}_i } P(Y_j=1 | x^{(i)}) \prod_{l \in \mathcal{N}_i} P(Y_l=0 | x^{(i)})  \\
 \end{align}
 
@@ -432,43 +433,250 @@ It will be easier to maximize the log likelihood:
 \begin{align}
 	l(\theta) &= \log L(\theta) \\
 			  &= \log \left( \prod_{i=1}^m  \prod_{j \in \mathcal{P}_i } P(Y_j=1 | x^{(i)}) \prod_{l \in \mathcal{N}_i} P(Y_l=0 | x^{(i)}) \right) \\
-			  &= \sum_{i=1}^m \left( \sum_{j \in \mathcal{P}_i } \log P(Y_j=1 | x^{(i)}) + \sum_{l \in \mathcal{N}_i} \log P(Y_l=0 | x^{(i)})  \right) \\
-			  &= \sum_{i=1}^m \left( \sum_{j \in \mathcal{P}_i } \log (\frac{1}{1 + \exp(-\theta^{(j)\top} x^{(i)})}) + \sum_{l \in \mathcal{N}_i} \log (1 - \frac{1}{1 + \exp(-\theta^{(l)\top} x^{(i)})}) \right) \\
-			  &= \sum_{i=1}^m \left( \sum_{j \in \mathcal{P}_i } \log (\sigma(\theta^{(j)\top} x^{(i)})) + \sum_{l \in \mathcal{N}_i} \log (\sigma(-\theta^{(l)\top} x^{(i)})) \right)
+			  &= \sum_{i=1}^m \left( \sum_{j \in \mathcal{P}_i } \log (\sigma(\theta^{(j)\top} x^{(i)})) + \sum_{l \in \mathcal{N}_i} \log (1 - \sigma(\theta^{(l)\top} x^{(i)})) \right) \\
+  			  &= \sum_{i=1}^m \sum_{j=1}^K
+  			  	\left\{
+				    \begin{array}{ll}
+				        \log (\sigma(\theta^{(j)\top} x^{(i)})) & \mbox{if } y_j^{(i)} =1 \mbox{ ie }\in \mathcal{P}_i\\
+				        \log (1 - \sigma(\theta^{(j)\top} x^{(i)})) & \mbox{if } y_j^{(i)} =0 \mbox{ ie } \in \mathcal{N}_i
+				    \end{array}
+				\right. \\
 \end{align}
 
 
 It is the same as minimizing the following (negative log likelihood):
 
 \begin{align} 
-	J(\theta) = -l(\theta)
+	E(\theta) = -l(\theta)
 \end{align}
 
 \subsection*{Optimization}
 
-We want to minimize $J(\theta)$. The derivative of $J(\theta)$ as given above with respect to $\theta_j^{(k)}$, $j \in [1,d]$ is:
+We want to minimize $E(\theta)$. The derivative of $E(\theta)$ as given above with respect to $\theta_j^{(k)}$, $j \in [1,d]$ is:
 
 \begin{align}
-	\frac{\partial J(\theta)}{\partial \theta_j^{(k)}} = \sum_{i=1}^m x^{(i)}_j (h_{\theta_j^{(k)}}(x^{(i)}) - y_j^{(i)})
+	\frac{\partial E(\theta)}{\partial \theta_k^{(j)}} = \sum_{i=1}^m x^{(i)}_k (\sigma(\theta^{(j)\top} x^{(i)}) - y_j^{(i)})
+\end{align}
+
+Hints:
+\begin{align}
+	\frac{\partial (\theta^{(j)\top} x^{(i)}) }{\partial \theta_k^{(j)}}  &= x_k^{(i)} 
+\end{align}
+\begin{align}
+	(log \circ \sigma)'(t) &= \sigma(-t)
+\end{align}
+\begin{align}
+y_j^{(i)} = 
+	\left\{
+	    \begin{array}{ll}
+	        1 & \mbox{if } y_j^{(i)} \in \mathcal{P}_i\\
+	        0 & \mbox{if } y_j^{(i)} \in \mathcal{N}_i
+	    \end{array}
+	\right.
 \end{align}
 
 The entire gradient can be expressed as a $d \times K$ dimensional matrix (with d being the dimension of each sample feature and K the number of classes):
 
 \begin{align}
-	\nabla_\theta J(\theta) 
+	\nabla_\theta E(\theta) 
 	&= 
 	\begin{bmatrix}
-		\frac{\partial J(\theta)}{\partial \theta_1^{(1)}} 	& \dots 						& \frac{\partial J(\theta)}{\partial \theta_1^{(K)}} \\
-		\dots 												&  \frac{\partial J(\theta)}{\partial \theta_i^{(j)}} 	& \dots \\
-		\frac{\partial J(\theta)}{\partial \theta_d^{(1)}} 	& \dots 						& \frac{\partial J(\theta)}{\partial \theta_d^{(K)}}
+		\frac{\partial E(\theta)}{\partial \theta_1^{(1)}} 	& \dots 						& \frac{\partial E(\theta)}{\partial \theta_1^{(K)}} \\
+		\dots 												&  \frac{\partial E(\theta)}{\partial \theta_i^{(j)}} 	& \dots \\
+		\frac{\partial E(\theta)}{\partial \theta_d^{(1)}} 	& \dots 						& \frac{\partial E(\theta)}{\partial \theta_d^{(K)}}
 	\end{bmatrix} 
 \end{align}
 
-We can then apply gradient descent to find global minimum since $J(\theta)$ is convex, with learning rate $\alpha$:
+We can then apply gradient descent to find global minimum since $E(\theta)$ is convex, with learning rate $\alpha$:
 
 \begin{align}
-	\theta \leftarrow \theta - \alpha \nabla_\theta J(\theta)
+	\theta \leftarrow \theta - \alpha \nabla_\theta E(\theta)
 \end{align}
 
 
+
+\subsection*{Context}
+
+This method is nearly equivalent to applying binary relevance (problem transformation method) to logistic regression.
+
+Yet:
+\begin{outline}
+\1 it can be considered as an adaptative method (in opposition to problem transformation method): the algorithm is adapted to fit the data
+\1 an advantage of this algorithm is to be able to compute gradient for each sample evaluated during training. This allows to retropropagate gradient to previous layers in the context of a multi-layer neural network. In comparison, using binary relevance method with any classifier does not allow this.
+\end{outline}
+
+
+
+
+
+
+
+
+\pagebreak
+
+\subsection*{Gradient retro-propagation in multilayer neural network}
+
+\subsubsection*{Previous layer definition}
+
+Suppose a previous layer l (taking a vector x of given size in ouput space of size d, ie previous notation for $h$ input vector size) as follow:
+\begin{align}
+	l = 
+	\begin{bmatrix} 
+		l_1 \\
+		l_2 \\
+		\vdots \\
+		l_d
+	\end{bmatrix}
+\end{align}
+
+
+With f being a function parametrized by w so that:
+\begin{align}
+	l_j = f_{W^{(j)}}(x)
+\end{align}
+With $W$ being the matrix of weights from input to hidden layer.
+
+
+Let's denote:
+
+\begin{align}
+	s_k  = \theta^{(k)\top} l = \sum_{p=1}^{d} \theta^{(k)\top}_p l_p 
+\end{align}
+
+we can express $h$ as, $\forall k \in [1, K]$:
+
+\begin{align}
+	h_k  = \sigma(s_k) = \sigma( \sum_{p=1}^{d} \theta^{(k)\top}_p l_p) 
+\end{align}
+
+Lets consider the following error on one sample $(x, y)$:
+
+\begin{align}
+	E = - \sum_{k=1}^K
+  			  	\left\{
+				    \begin{array}{ll}
+				        \log (h_k) & \mbox{if } y_k =1 \\
+				        \log (1 - h_k) & \mbox{if } y_k =0
+				    \end{array}
+				\right.
+\end{align}
+
+This error is relevant since the minimization of this error is equivalent to maximizing the maximum of (log-)likelihood.
+Plus, it is interpretable: if the $k^{th}$ component $y_k$ is:
+\begin{itemize}
+	\item positive ($y_k=1$): then the loss increase if $h_k$ is near 0, and decrease if $h_k$ is near 1.
+	\item negative ($y_k=0$): then the loss decrease if $h_k$ is near 0, and increase if $h_k$ is near 1.
+\end{itemize}
+
+
+
+We can represent it as the following multilayer network:
+
+\begin{tikzpicture}[shorten >=1pt,->,draw=black!50, node distance=\layersep]
+    \tikzstyle{every pin edge}=[<-,shorten <=1pt]
+    \tikzstyle{neuron}=[circle,fill=black!25,minimum size=17pt,inner sep=0pt]
+    \tikzstyle{input neuron}=[neuron, fill=green!50];
+    \tikzstyle{output neuron}=[neuron, fill=red!50];
+    \tikzstyle{hidden neuron}=[neuron, fill=blue!50];
+    \tikzstyle{true neuron}=[neuron, fill=yellow!50];
+    \tikzstyle{annot} = [text width=4em, text centered]
+
+    % Draw the input layer nodes
+    \foreach \name / \y in {1,...,4}
+    % This is the same as writing \foreach \name / \y in {1/1,2/2,3/3,4/4}
+        \node[input neuron, pin=left:$x_{\y}$ ] (I-\name) at (0,-\y) {};
+
+    % Draw the hidden layer nodes
+    \foreach \name / \y in {1,...,5}
+        \path[yshift=0.5cm] node[hidden neuron] (H-\name) at (\layersep,-\y cm) {};
+
+    % Draw the output layer node
+    % \node[output neuron,pin={[pin edge={->}]right:Output}, right of=H-3] (O) {};
+
+	\foreach \name / \y in {1,...,3}
+        \node[output neuron, pin=right:$h_{\y}$ ] (O-\name) at (\layersep*2,-\y) {};
+
+    % Draw the true layer node
+
+	\foreach \name / \y in {1,...,3}
+        \node[true neuron, pin=right:$y_{\y}$ ] (T-\name) at (\layersep*3,-\y) {};
+
+
+    % Connect every node in the input layer with every node in the
+    % hidden layer.
+    \foreach \source in {1,...,4}
+        \foreach \dest in {1,...,5}
+            \path (I-\source) edge (H-\dest);
+
+    % Connect every node in the hidden layer with the output layer
+    \foreach \source in {1,...,5}
+        \foreach \dest in {1,...,3}
+	        \path (H-\source) edge (O-\dest);
+
+    % Annotate the layers
+    \node[annot,above of=H-1, node distance=1cm] (hl) {Hidden layer: $l$ of size $d$};
+    \node[annot,left of=hl] {Input layer: $x$};
+    \node[annot,right of=hl] (ol) {Output layer: $h$ of size $K$};
+    \node[annot,right of=ol] {True layer: $y$ of size $K$};
+
+    \node[annot] (W) at (\layersep/2,-5) {$f|W$};
+    \node[annot] (W) at (\layersep*3/2,-5) {$\theta$};
+
+\end{tikzpicture}
+
+\subsubsection*{Gradient retropropagation}
+
+
+\begin{align}
+	\frac{ \partial E } { \partial h_k } = \left\{
+				    \begin{array}{ll}
+				        - \frac{1}{h_k} & \mbox{if } y_k =1 \\
+				        \frac{1}{1 - h_k} & \mbox{if } y_k =0
+				    \end{array}
+				\right.
+\end{align}
+
+
+\begin{align}
+	\frac{ \partial E } { \partial s_k } 
+		=  
+		\frac{ \partial E } { \partial h_k } \cdot \frac{ \partial h_k } { \partial s_k } 
+		&=
+		\left\{
+		    \begin{array}{ll}
+		        - \frac{1}{h_k} \cdot h_k (1 - h_k)& \mbox{if } y_k =1 \\
+		        \frac{1}{1 - h_k} \cdot h_k (1 - h_k)& \mbox{if } y_k =0
+		    \end{array}
+		\right. \\
+		&=
+		\left\{
+		    \begin{array}{ll}
+		       h_k - 1 & \mbox{if } y_k =1 \\
+		        h_k & \mbox{if } y_k =0
+		    \end{array}
+		\right. \\
+		&= h_k - y_k
+\end{align}
+
+
+
+\begin{align}
+	\frac{\partial E}{\partial \theta_i^{(k)}} 
+	= 
+	\frac{\partial E}{\partial s_k} \cdot \frac{\partial s_k}{\partial \theta_i^{(k)}} 
+	= 
+	l_i (h_k - y_k)
+\end{align}
+
+
+Trick: derivate $E$ in regard to $s_k$:
+\begin{align}
+	\frac{\partial E}{\partial l_i} 
+	&= 
+	\sum_{k=1}^K \frac{\partial E}{\partial s_k} \cdot \frac{\partial s_k}{\partial l_i} \\
+	&= 
+	\sum_{k=1}^K \theta_i^{(k)} (h_k - y_k)
+\end{align}
+
+We now have the gradient of E in regard to the output of the hidden layer. The equation to update $W$ will depend of which $f$ is chosen.
 
