--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,34 @@
 \begin{abstract}
-% Abstract en français
 
-Abstract en français
+This paper will contain:
 
-% English abstract
-
-English abstract
+\begin{itemize}
+	\item Introduction, what does Alkemics do?
+	\item Alkemics data quality challenge
+	\begin{itemize}
+		\item Stakes: why it matters
+		\item Constraints: what are our requirements
+		\item Workflow: how we implemented it
+		\item Monitoring: how to track models performances
+	\end{itemize}
+	\item Focus on prediction process
+	\begin{itemize}
+		\item Natural language processing approaches
+		\begin{itemize}
+			\item How to embed?
+			\item WordToVec
+			\item FastText
+		\end{itemize}
+		\item Multilabel
+		\begin{itemize}
+			\item Major approaches
+			\item Scoring metrics
+			\item Neural network approach
+		\end{itemize}
+		\item FastText fork to support multilabel classification
+		\item Predictions score calibration
+	\end{itemize}
+	\item What next?
+\end{itemize}
 
 \end{abstract}
