update - alkemics data quality challenge

--- a/abstract.tex
+++ b/abstract.tex
@@ -25,8 +25,11 @@ This paper will contain:
 			\item Scoring metrics
 			\item Neural network approach
 		\end{itemize}
+		\item Miscellaneous
 		\item FastText fork to support multilabel classification
 		\item Predictions score calibration
+		\item Precision/Recall compromise
+		\item Models boostrap
 	\end{itemize}
 	\item What next?
 \end{itemize}
