--- a/title.tex
+++ b/title.tex
@@ -5,9 +5,9 @@
 \begin{center}
 
 \begin{center}
-    \includegraphics[height=3cm]{images/logo-telecom-paristech.png}
+    \includegraphics[height=3cm]{images/logos/logo-telecom-paristech.png}
     \hspace{\stretch{1}}
-    \includegraphics[width=6cm]{images/Logo-Alkemics.png}
+    \includegraphics[width=6cm]{images/logos/Logo-Alkemics.png}
 \end{center}
 
 \vspace{160pt}
